force-app/main/default/objects/Financial_Consent_Service_Item__c/Financial_Consent_Service_Item__c.object-meta.xml
<CustomObject>
    <label>Financial Consent Service Item</label>
    <nameField>
        <label>Financial Consent Service Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Consent Service Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>