force-app/main/default/objects/Financial_Consent_Service_Item__c/fields/Estimated_Medicare_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Medicare_Rebate__c</fullName>
    <label>Estimated Medicare Rebate</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>