force-app/main/default/objects/Financial_Consent_Service_Item__c/fields/Financial_Consent_Name__c.field-meta.xml
<CustomField>
    <fullName>Financial_Consent_Name__c</fullName>
    <label>Financial Consent Name</label>
    <referenceTo>Consent__c</referenceTo>
    <relationshipLabel>Financial Consent Service Items</relationshipLabel>
    <relationshipName>Financial_Consent_Service_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>