force-app/main/default/objects/Financial_Consent_Service_Item__c/fields/GST_Applied__c.field-meta.xml
<CustomField>
    <fullName>GST_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Applied?</label>
    <type>Checkbox</type>
</CustomField>