force-app/main/default/objects/Financial_Consent_Service_Item__c/fields/Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number__c</fullName>
    <label>Line Item Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>