force-app/main/default/objects/Financial_Consent_Service_Item__c/fields/Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Pocket__c</fullName>
    <formula>Price__c -  Estimated_Medicare_Rebate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out of Pocket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>